# gentoo-heather

./: CMakeLists.txt  README.md  check_header.sh  readme.md  spaces.sh
app-editors/atom/: Manifest  atom-0.204.0.ebuild  atom-0.205.0.ebuild  atom-1.0.2.ebuild  atom-1.5.4.ebuild  atom-1.9.0_beta0.ebuild
app-editors/emacs/: Manifest  emacs-9999.ebuild
app-editors/uemacs/: metadata.xml  uemacs-9999.ebuild
app-editors/visual-studio-code/: Manifest  metadata.xml  visual-studio-code-0.3.0.ebuild
app-emulation/emul-linux-x86-opengl/: emul-linux-x86-opengl-20130224-r51.ebuild
app-emulation/playonlinux/: Manifest  metadata.xml  playonlinux-4.2.8.ebuild
app-emulation/virtualbox-guest-additions/: virtualbox-guest-additions-4.2.6.ebuild
app-emulation/wine/: Manifest  wine-1.9.11.ebuild
app-misc/grc/: Manifest  grc-1.4.ebuild  grc-9999.ebuild  metadata.xml
app-misc/suka/: metadata.xml  suka-1.0.ebuild
app-misc/sync/: metadata.xml  sync-9999.ebuild
app-misc/tmux/: Manifest  tmux-2.2.ebuild
app-misc/tmux-mem-cpu-load/: Manifest  tmux-mem-cpu-load-3.3.0.ebuild
app-misc/todo/: Manifest  metadata.xml  todo-9999.ebuild
app-misc/unmerge/: metadata.xml  unmerge-1.0.ebuild
app-portage/hackport/: Manifest  hackport-9999.ebuild  metadata.xml
app-portage/smart-live-rebuild/: smart-live-rebuild-9999.ebuild
app-shells/fish/: fish-9999.ebuild  metadata.xml
app-text/pandoc/: Manifest  (+2 more)
eclass/: fake.eclass  go-mono.eclass  kde4-base.eclass  ubuntu-versionator.eclass
licenses/: EULA
metadata/: layout.conf
profiles/: categories  package.unmask  repo_name
(+225 files in other folders)
