cmake_minimum_required(VERSION 2.8)

SET(CMAKE_BUILD_TYPE distribution)

project (nengraphy)
add_subdirectory (app-misc)
add_subdirectory (app-text)
add_subdirectory (dev-haskell)
add_subdirectory (dev-lang)
add_subdirectory (dev-libs)
add_subdirectory (dev-scheme)
add_subdirectory (dev-util)
add_subdirectory (gnome-extra)
add_subdirectory (media-sound)
add_subdirectory (sys-kernel)
add_subdirectory (x11-libs)
add_subdirectory (x11-misc)
add_subdirectory (x11-wm)
add_subdirectory (profiles)
